# CoinAuto

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  deployment_guide.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_bot.py  setup.py  start_safe_trading.py  test_api_connection.py  test_public_api.py
config/: default.yaml  notifications.json  test_safe.yaml
config/strategies/: aggressive_test.yaml  instant_test.yaml  rsi_momentum.yaml  rsi_safe_test.yaml  simple_test.yaml  sma_crossover.yaml
config/templates/: aggressive.yaml  balanced.yaml  conservative.yaml  development.yaml  minimal.yaml  production.yaml
docs/strategies/: README.md  rsi_momentum.md  sma_crossover.md
examples/: config_hot_reload_demo.py  strategy_usage.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_main_trading_flow.py
tests/property/: __init__.py  test_api_authentication.py  test_authentication_headers.py  test_average_price_recalculation.py  test_averaging_buy_limitation.py  test_balance_protection.py  test_balance_validation_consistency.py  test_bilateral_fee_reflection.py  test_breakeven_sell_execution.py  test_buy_info_recording.py  test_config_hot_reload.py  test_config_loading.py  test_consecutive_loss_limit.py  test_credential_encryption.py  test_daily_loss_limit_management.py  test_dynamic_config_application.py  test_error_logging_completeness.py  test_fee_inclusive_profit_calculation.py  test_first_partial_sell.py  test_log_rotation_consistency.py  test_market_data_parsing.py  test_market_decline_strategy_suspension.py  test_minimum_balance_check.py  test_order_creation_accuracy.py  test_order_retry_behavior.py  test_partial_sell_quantity_update.py  test_performance_metric_calculation.py  test_portfolio_synchronization.py  test_position_info_retrieval.py  test_position_liquidation_reset.py  test_rapid_decline_buy_suspension.py  test_rate_limit_backoff.py  test_report_generation_consistency.py  test_rolling_window_maintenance.py  test_rsi_oversold_confidence_adjustment.py  test_second_partial_sell.py  test_state_reset_after_sell.py  test_stop_loss_adjustment.py  test_stop_loss_averaging_buy_execution.py  test_stop_loss_sell_execution.py  (+7 more)
tests/unit/: __init__.py  test_config_manager.py  test_data_models.py  test_database.py  (+12 more)
upbit_trading_bot/: __init__.py  main.py
(+40 files in other folders)
